<?xml version="1.0"?>
<package format="2">
  <name>traffic_light_detector</name>
  <version>0.0.0</version>
  <description>The traffic_light_detector package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
